--- a/UserMaintenance/UserMaintenance/Resource.resx
+++ b/UserMaintenance/UserMaintenance/Resource.resx
@@ -120,7 +120,13 @@
   <data name="Add" xml:space="preserve">
     <value>Hozzáadás</value>
   </data>
+  <data name="DefaultFileName" xml:space="preserve">
+    <value>nevek</value>
+  </data>
   <data name="FullName" xml:space="preserve">
     <value>Teljes Név</value>
+  </data>
+  <data name="WriteToFile" xml:space="preserve">
+    <value>Fájlba írás</value>
   </data>
 </root>
